--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
     <div class="question-group">
       <input type="radio" id="questionOne" name="selected" class="questions">
-      <label for="questionOne" class="question"><h3>How many team members can I invite?</h3></label>
+      <label for="questionOne" class="question"><span class="title">How many team members can I invite?</span></label>
       <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down-up">
       <span class="content">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</span>
     </div>
@@ -62,28 +62,30 @@
     
     <div class="question-group">
       <input type="radio" id="questionTwo" name="selected" class="questions">
-      <label for="questionTwo" class="question"><h3>What is the maximum file upload size?</h3></label>
+      <label for="questionTwo" class="question">
+        <span class="title">What is the maximum file upload size?</span>
+      </label>
       <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down-up">
       <span class="content">No more than 2GB. All files in your account must fit your allotted storage space.</span>
     </div>
 
     <div class="question-group">
       <input type="radio" id="questionThree" name="selected" class="questions">
-      <label for="questionThree" class="question"><h3>How do I reset my password?</h3></label>
+      <label for="questionThree" class="question"><span class="title">How do I reset my password?</span></label>
       <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down-up">
       <span class="content">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</span>
     </div>
 
     <div class="question-group">
       <input type="radio" id="questionFour" name="selected" class="questions">
-      <label for="questionFour" class="question"><h3>Can I cancel my subscription?</h3></label>
+      <label for="questionFour" class="question"><span class="title">Can I cancel my subscription?</span></label>
     <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down-up">
     <span class="content">Yes! Send us a message and we’ll process your request no questions asked.</span>
   </div>
   
   <div class="question-group">
     <input type="radio" id="questionFive" name="selected" class="questions">
-    <label for="questionFive" class="question"><h3> Do you provide additional support?</h3></label>
+    <label for="questionFive" class="question"><span class="title">Do you provide additional support?</span></label>
     <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down-up">
     <span class="content">Chat and email support is available 24/7. Phone lines are open during normal business hours.</span>
   </div>
